--- a/res/layout/page_indicator.xml
+++ b/res/layout/page_indicator.xml
@@ -23,5 +23,6 @@
             android:layout_width="48dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:visibility="gone"
             android:scaleType="centerInside"/>
 </com.android.launcher3.pageindicators.PageIndicatorLineCaret>
