--- a/res/xml/default_workspace_5x5.xml
+++ b/res/xml/default_workspace_5x5.xml
@@ -40,6 +40,13 @@
 
     <resolve
         launcher:screen="0"
+        launcher:x="2"
+        launcher:y="-1" >
+        <favorite launcher:uri="tel:1320010001" />
+
+    </resolve>
+    <resolve
+        launcher:screen="0"
         launcher:x="4"
         launcher:y="-1" >
         <favorite launcher:uri="#Intent;action=android.intent.action.MAIN;category=android.intent.category.APP_MARKET;end" />
