--- a/res/xml/default_workspace_5x5.xml
+++ b/res/xml/default_workspace_5x5.xml
@@ -17,7 +17,7 @@
 <favorites xmlns:launcher="http://schemas.android.com/apk/res-auto/com.android.launcher3">
 
     <!-- Hotseat -->
-    <include launcher:workspace="@xml/dw_phone_hotseat" />
+<!--    <include launcher:workspace="@xml/dw_phone_hotseat" />-->
 
     <!-- Bottom row -->
     <resolve
