--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -5,8 +5,8 @@
 
 <!-- Miscellaneous -->
     <bool name="config_largeHeap">false</bool>
-    <bool name="is_tablet">false</bool>
-    <bool name="is_large_tablet">false</bool>
+    <bool name="is_tablet">true</bool>
+    <bool name="is_large_tablet">true</bool>
     <bool name="allow_rotation">true</bool>
 
     <!-- A string pointer to the original app name string. This allows derived projects to
