--- a/res/layout-land/launcher.xml
+++ b/res/layout-land/launcher.xml
@@ -49,6 +49,11 @@
             android:layout_gravity="right"
             launcher:layout_ignoreInsets="true" />
 
+        <!-- Keep these behind the workspace so that they are not visible when
+        we go into AllApps -->
+        <include layout="@layout/page_indicator"
+            android:id="@+id/page_indicator" />
+
         <include
             android:id="@+id/drop_target_bar"
             layout="@layout/drop_target_bar_vert" />
@@ -57,22 +62,12 @@
             android:id="@+id/overview_panel"
             android:visibility="gone" />
 
-        <com.android.launcher3.pageindicators.PageIndicatorCaretLandscape
-            android:id="@+id/page_indicator"
-            android:layout_width="@dimen/dynamic_grid_page_indicator_height"
-            android:layout_height="@dimen/dynamic_grid_page_indicator_height"
-            android:visibility="gone"
-            android:layout_gravity="bottom|left"/>
-
         <!-- A place holder view instead of the QSB in transposed layout -->
         <View
             android:layout_width="0dp"
             android:layout_height="10dp"
             android:id="@+id/qsb_container" />
 
-<!--        <include-->
-<!--            layout="@layout/qsb_container"-->
-<!--            android:id="@+id/qsb_container" />-->
 
 
 
