--- a/res/xml/device_profiles.xml
+++ b/res/xml/device_profiles.xml
@@ -32,169 +32,169 @@
         launcher:numRows="4" />
 
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_3x3"
-        launcher:hotseatIconSize="48"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:minAllAppsPredictionColumns="3"
-        launcher:minHeightDps="300"
-        launcher:minWidthDps="255"
-        launcher:name="Super Short Stubby"
-        launcher:numColumns="3"
-        launcher:numFolderColumns="3"
-        launcher:numFolderRows="2"
-        launcher:numHotseatIcons="3"
-        launcher:numRows="2" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_3x3"-->
+<!--        launcher:hotseatIconSize="48"-->
+<!--        launcher:iconSize="48"-->
+<!--        launcher:iconTextSize="13.0"-->
+<!--        launcher:minAllAppsPredictionColumns="3"-->
+<!--        launcher:minHeightDps="300"-->
+<!--        launcher:minWidthDps="255"-->
+<!--        launcher:name="Super Short Stubby"-->
+<!--        launcher:numColumns="3"-->
+<!--        launcher:numFolderColumns="3"-->
+<!--        launcher:numFolderRows="2"-->
+<!--        launcher:numHotseatIcons="3"-->
+<!--        launcher:numRows="2" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_3x3"
-        launcher:hotseatIconSize="48"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:minAllAppsPredictionColumns="3"
-        launcher:minHeightDps="400"
-        launcher:minWidthDps="255"
-        launcher:name="Shorter Stubby"
-        launcher:numColumns="3"
-        launcher:numFolderColumns="3"
-        launcher:numFolderRows="3"
-        launcher:numHotseatIcons="3"
-        launcher:numRows="3" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_3x3"-->
+<!--        launcher:hotseatIconSize="48"-->
+<!--        launcher:iconSize="48"-->
+<!--        launcher:iconTextSize="13.0"-->
+<!--        launcher:minAllAppsPredictionColumns="3"-->
+<!--        launcher:minHeightDps="400"-->
+<!--        launcher:minWidthDps="255"-->
+<!--        launcher:name="Shorter Stubby"-->
+<!--        launcher:numColumns="3"-->
+<!--        launcher:numFolderColumns="3"-->
+<!--        launcher:numFolderRows="3"-->
+<!--        launcher:numHotseatIcons="3"-->
+<!--        launcher:numRows="3" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
-        launcher:hotseatIconSize="48"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="420"
-        launcher:minWidthDps="275"
-        launcher:name="Short Stubby"
-        launcher:numColumns="4"
-        launcher:numFolderColumns="4"
-        launcher:numFolderRows="3"
-        launcher:numHotseatIcons="5"
-        launcher:numRows="3" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_4x4"-->
+<!--        launcher:hotseatIconSize="48"-->
+<!--        launcher:iconSize="48"-->
+<!--        launcher:iconTextSize="13.0"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="420"-->
+<!--        launcher:minWidthDps="275"-->
+<!--        launcher:name="Short Stubby"-->
+<!--        launcher:numColumns="4"-->
+<!--        launcher:numFolderColumns="4"-->
+<!--        launcher:numFolderRows="3"-->
+<!--        launcher:numHotseatIcons="5"-->
+<!--        launcher:numRows="3" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
-        launcher:hotseatIconSize="48"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="450"
-        launcher:minWidthDps="255"
-        launcher:name="Stubby"
-        launcher:numColumns="4"
-        launcher:numFolderColumns="4"
-        launcher:numFolderRows="3"
-        launcher:numHotseatIcons="5"
-        launcher:numRows="3" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_4x4"-->
+<!--        launcher:hotseatIconSize="48"-->
+<!--        launcher:iconSize="48"-->
+<!--        launcher:iconTextSize="13.0"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="450"-->
+<!--        launcher:minWidthDps="255"-->
+<!--        launcher:name="Stubby"-->
+<!--        launcher:numColumns="4"-->
+<!--        launcher:numFolderColumns="4"-->
+<!--        launcher:numFolderRows="3"-->
+<!--        launcher:numHotseatIcons="5"-->
+<!--        launcher:numRows="3" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
-        launcher:hotseatIconSize="48"
-        launcher:iconSize="48"
-        launcher:iconTextSize="13.0"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="491.33"
-        launcher:minWidthDps="296"
-        launcher:name="Nexus S"
-        launcher:numColumns="4"
-        launcher:numFolderColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numHotseatIcons="5"
-        launcher:numRows="4" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_4x4"-->
+<!--        launcher:hotseatIconSize="48"-->
+<!--        launcher:iconSize="48"-->
+<!--        launcher:iconTextSize="13.0"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="491.33"-->
+<!--        launcher:minWidthDps="296"-->
+<!--        launcher:name="Nexus S"-->
+<!--        launcher:numColumns="4"-->
+<!--        launcher:numFolderColumns="4"-->
+<!--        launcher:numFolderRows="4"-->
+<!--        launcher:numHotseatIcons="5"-->
+<!--        launcher:numRows="4" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
-        launcher:hotseatIconSize="56"
-        launcher:iconSize="60"
-        launcher:iconTextSize="13.0"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="567"
-        launcher:minWidthDps="359"
-        launcher:name="Nexus 4"
-        launcher:numColumns="4"
-        launcher:numFolderColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numHotseatIcons="5"
-        launcher:numRows="4" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_4x4"-->
+<!--        launcher:hotseatIconSize="56"-->
+<!--        launcher:iconSize="60"-->
+<!--        launcher:iconTextSize="13.0"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="567"-->
+<!--        launcher:minWidthDps="359"-->
+<!--        launcher:name="Nexus 4"-->
+<!--        launcher:numColumns="4"-->
+<!--        launcher:numFolderColumns="4"-->
+<!--        launcher:numFolderRows="4"-->
+<!--        launcher:numHotseatIcons="5"-->
+<!--        launcher:numRows="4" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_4x4"
-        launcher:hotseatIconSize="56"
-        launcher:iconSize="60"
-        launcher:iconTextSize="13.0"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="567"
-        launcher:minWidthDps="335"
-        launcher:name="Nexus 5"
-        launcher:numColumns="4"
-        launcher:numFolderColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numHotseatIcons="5"
-        launcher:numRows="4" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_4x4"-->
+<!--        launcher:hotseatIconSize="56"-->
+<!--        launcher:iconSize="60"-->
+<!--        launcher:iconTextSize="13.0"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="567"-->
+<!--        launcher:minWidthDps="335"-->
+<!--        launcher:name="Nexus 5"-->
+<!--        launcher:numColumns="4"-->
+<!--        launcher:numFolderColumns="4"-->
+<!--        launcher:numFolderRows="4"-->
+<!--        launcher:numHotseatIcons="5"-->
+<!--        launcher:numRows="4" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_5x5"
-        launcher:hotseatIconSize="56"
-        launcher:iconSize="64"
-        launcher:iconTextSize="14.4"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="694"
-        launcher:minWidthDps="406"
-        launcher:name="Large Phone"
-        launcher:numColumns="5"
-        launcher:numFolderColumns="4"
-        launcher:numFolderRows="4"
-        launcher:numHotseatIcons="5"
-        launcher:numRows="5" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_5x5"-->
+<!--        launcher:hotseatIconSize="56"-->
+<!--        launcher:iconSize="64"-->
+<!--        launcher:iconTextSize="14.4"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="694"-->
+<!--        launcher:minWidthDps="406"-->
+<!--        launcher:name="Large Phone"-->
+<!--        launcher:numColumns="5"-->
+<!--        launcher:numFolderColumns="4"-->
+<!--        launcher:numFolderRows="4"-->
+<!--        launcher:numHotseatIcons="5"-->
+<!--        launcher:numRows="5" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_5x6"
-        launcher:hotseatIconSize="60"
-        launcher:iconSize="72"
-        launcher:iconTextSize="14.4"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="904"
-        launcher:minWidthDps="575"
-        launcher:name="Nexus 7"
-        launcher:numColumns="6"
-        launcher:numFolderColumns="5"
-        launcher:numFolderRows="4"
-        launcher:numHotseatIcons="7"
-        launcher:numRows="5" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_5x6"-->
+<!--        launcher:hotseatIconSize="60"-->
+<!--        launcher:iconSize="72"-->
+<!--        launcher:iconTextSize="14.4"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="904"-->
+<!--        launcher:minWidthDps="575"-->
+<!--        launcher:name="Nexus 7"-->
+<!--        launcher:numColumns="6"-->
+<!--        launcher:numFolderColumns="5"-->
+<!--        launcher:numFolderRows="4"-->
+<!--        launcher:numHotseatIcons="7"-->
+<!--        launcher:numRows="5" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_5x6"
-        launcher:hotseatIconSize="76"
-        launcher:iconSize="76"
-        launcher:iconTextSize="14.4"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="1207"
-        launcher:minWidthDps="727"
-        launcher:name="Nexus 10"
-        launcher:numColumns="6"
-        launcher:numFolderColumns="5"
-        launcher:numFolderRows="4"
-        launcher:numHotseatIcons="7"
-        launcher:numRows="5" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_5x6"-->
+<!--        launcher:hotseatIconSize="76"-->
+<!--        launcher:iconSize="76"-->
+<!--        launcher:iconTextSize="14.4"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="1207"-->
+<!--        launcher:minWidthDps="727"-->
+<!--        launcher:name="Nexus 10"-->
+<!--        launcher:numColumns="6"-->
+<!--        launcher:numFolderColumns="5"-->
+<!--        launcher:numFolderRows="4"-->
+<!--        launcher:numHotseatIcons="7"-->
+<!--        launcher:numRows="5" />-->
 
-    <profile
-        launcher:defaultLayoutId="@xml/default_workspace_5x6"
-        launcher:hotseatIconSize="72"
-        launcher:iconSize="100"
-        launcher:iconTextSize="20.0"
-        launcher:minAllAppsPredictionColumns="4"
-        launcher:minHeightDps="2527"
-        launcher:minWidthDps="1527"
-        launcher:name="20-inch Tablet"
-        launcher:numColumns="7"
-        launcher:numFolderColumns="6"
-        launcher:numFolderRows="6"
-        launcher:numHotseatIcons="7"
-        launcher:numRows="7" />
+<!--    <profile-->
+<!--        launcher:defaultLayoutId="@xml/default_workspace_5x6"-->
+<!--        launcher:hotseatIconSize="72"-->
+<!--        launcher:iconSize="100"-->
+<!--        launcher:iconTextSize="20.0"-->
+<!--        launcher:minAllAppsPredictionColumns="4"-->
+<!--        launcher:minHeightDps="2527"-->
+<!--        launcher:minWidthDps="1527"-->
+<!--        launcher:name="20-inch Tablet"-->
+<!--        launcher:numColumns="7"-->
+<!--        launcher:numFolderColumns="6"-->
+<!--        launcher:numFolderRows="6"-->
+<!--        launcher:numHotseatIcons="7"-->
+<!--        launcher:numRows="7" />-->
 
 </profiles>
