--- a/res/layout/qsb_default_view.xml
+++ b/res/layout/qsb_default_view.xml
@@ -21,6 +21,7 @@
     <LinearLayout
         android:layout_width="464dp"
         android:layout_height="36dp"
+        android:layout_marginTop="2dp"
         android:layout_gravity="center"
         android:gravity="center_vertical"
         android:paddingLeft="12dp"
