--- a/res/layout/user_folder.xml
+++ b/res/layout/user_folder.xml
@@ -18,9 +18,37 @@
     xmlns:launcher="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/quantum_panel"
+    android:background="@drawable/folder_shape"
     android:elevation="5dp"
     android:orientation="vertical" >
+
+    <LinearLayout
+        android:id="@+id/folder_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp" >
+        <com.android.launcher3.ExtendedEditText
+            android:id="@+id/folder_name"
+            android:layout_width="match_parent"
+            android:layout_height="27dp"
+            android:background="#00000000"
+            android:gravity="center_horizontal"
+            android:hint="@string/folder_hint_text"
+            android:imeOptions="flagNoExtractUi"
+            android:paddingBottom="3dp"
+            android:paddingTop="8dp"
+            android:singleLine="true"
+            android:textColor="#cc000000"
+            android:textColorHighlight="#ffCCCCCC"
+            android:textColorHint="#cc000000"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
 
     <com.android.launcher3.folder.FolderPagedView
         android:id="@+id/folder_content"
@@ -36,33 +64,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="false"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingLeft="12dp"
         android:paddingRight="12dp" >
 
-        <com.android.launcher3.ExtendedEditText
-            android:id="@+id/folder_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:background="#00000000"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="center_horizontal"
-            android:hint="@string/folder_hint_text"
-            android:imeOptions="flagNoExtractUi"
-            android:paddingBottom="@dimen/folder_label_padding_bottom"
-            android:paddingTop="@dimen/folder_label_padding_top"
-            android:singleLine="true"
-            android:textColor="#ff777777"
-            android:includeFontPadding="false"
-            android:textColorHighlight="#ffCCCCCC"
-            android:textColorHint="#ff808080"
-            android:textSize="@dimen/folder_label_text_size" />
-
         <com.android.launcher3.pageindicators.PageIndicatorDots
             android:id="@+id/folder_page_indicator"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:elevation="1dp"
