--- a/res/layout/user_folder.xml
+++ b/res/layout/user_folder.xml
@@ -66,7 +66,9 @@
         android:clipChildren="false"
         android:orientation="vertical"
         android:paddingLeft="12dp"
-        android:paddingRight="12dp" >
+        android:paddingRight="12dp"
+        android:paddingBottom="4dp"
+        >
 
         <com.android.launcher3.pageindicators.PageIndicatorDots
             android:id="@+id/folder_page_indicator"
