--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -85,10 +85,10 @@
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:textAlignment">viewStart</item>
         <item name="android:elevation">@dimen/deep_shortcuts_elevation</item>
-        <item name="android:paddingStart">@dimen/bg_pill_height</item>
-        <item name="android:paddingEnd">@dimen/deep_shortcut_padding_end</item>
-        <item name="android:drawableEnd">@drawable/deep_shortcuts_drag_handle</item>
-        <item name="android:drawablePadding">@dimen/deep_shortcut_drawable_padding</item>
+<!--        <item name="android:paddingStart">@dimen/bg_pill_height</item>-->
+<!--        <item name="android:paddingEnd">@dimen/deep_shortcut_padding_end</item>-->
+<!--        <item name="android:drawableEnd">@drawable/deep_shortcuts_drag_handle</item>-->
+<!--        <item name="android:drawablePadding">@dimen/deep_shortcut_drawable_padding</item>-->
         <item name="android:textColor">#FF212121</item>
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">sans-serif</item>
