--- a/res/layout/qsb_default_view.xml
+++ b/res/layout/qsb_default_view.xml
@@ -19,37 +19,37 @@
              android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="464dp"
-        android:layout_height="36dp"
+        android:layout_width="@dimen/qsb_width"
+        android:layout_height="@dimen/qsb_height"
         android:layout_marginTop="2dp"
         android:layout_gravity="center"
         android:gravity="center_vertical"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
+        android:paddingLeft="@dimen/qsb_padding"
+        android:paddingRight="@dimen/qsb_padding"
         android:background="@drawable/qsb_shape"
         android:elevation="2dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="@dimen/qsb_icon_size"
+            android:layout_height="@dimen/qsb_icon_size"
             android:src="@mipmap/icon40_googleplay"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="@dimen/qsb_icon_margin"
             />
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="20dp"
+            android:layout_height="@dimen/qsb_text_height"
             android:text="Search for games and apps..."
-            android:layout_marginRight="24dp"
+            android:layout_marginRight="@dimen/qsb_icon_margin"
             android:textColor="#66000000"
-            android:textSize="11sp"
+            android:textSize="@dimen/qsb_text_size"
             android:gravity="center_vertical"
             />
         <ImageView
             android:id="@+id/btn_qsb_search"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="@dimen/qsb_icon_size"
+            android:layout_height="@dimen/qsb_icon_size"
             android:src="@drawable/selector_button_search"
             />
     </LinearLayout>
