--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,7 +15,38 @@
 -->
 
 <resources>
-<!-- Dynamic Grid -->
+    <!-- add by candice begin -->
+    <dimen name="worksapce_padding_left">8dp</dimen>
+    <dimen name="workpace_padding_top">22dp</dimen>
+
+
+    <dimen name="folder_cell_width">100dp</dimen>
+    <dimen name="folder_cell_height">80dp</dimen>
+
+    <dimen name="grid_hotseat_height">144dp</dimen>
+
+    <dimen name="qsb_width">360dp</dimen>
+    <dimen name="qsb_height">44dp</dimen>
+    <dimen name="qsb_padding">14dp</dimen>
+    <dimen name="qsb_icon_size">24dp</dimen>
+    <dimen name="qsb_icon_margin">14dp</dimen>
+    <dimen name="qsb_text_size">13sp</dimen>
+    <dimen name="qsb_text_height">24dp</dimen>
+    <dimen name="qsb_radius">22dp</dimen>
+
+
+    <!-- profile size -->
+
+    <dimen name="icon_size">48dp</dimen>
+    <dimen name="icon_text_size">12dp</dimen>
+
+
+
+
+    <!-- add by candice end -->
+
+
+    <!-- Dynamic Grid -->
     <dimen name="dynamic_grid_edge_margin">8dp</dimen>
     <dimen name="dynamic_grid_page_indicator_height">28dp</dimen>
     <dimen name="dynamic_grid_page_indicator_line_height">1dp</dimen>
@@ -29,7 +60,9 @@
     <dimen name="dynamic_grid_hotseat_height">80dp</dimen>
     <dimen name="dynamic_grid_hotseat_top_padding">0dp</dimen>
     <dimen name="dynamic_grid_hotseat_gutter_width">24dp</dimen>
+    <!-- edit by candice -->
     <dimen name="dynamic_grid_workspace_top_padding">0dp</dimen>
+
     <dimen name="dynamic_grid_workspace_page_spacing">8dp</dimen>
     <!-- Minimum space between workspace and hotseat in spring loaded mode -->
     <dimen name="dynamic_grid_min_spring_loaded_space">8dp</dimen>
