--- a/res/layout/qsb_default_view.xml
+++ b/res/layout/qsb_default_view.xml
@@ -40,7 +40,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="@dimen/qsb_text_height"
-            android:text="Search for games and apps..."
+            android:text="@string/search_hint"
             android:layout_marginRight="@dimen/qsb_icon_margin"
             android:textColor="#66000000"
             android:textSize="@dimen/qsb_text_size"
